src/Gramatica_Csharp.txt
Inicio -> sentencia_clase lista_clasesP  "sharp"
lista_clasesP -> sentencia_clase lista_clasesP
				| epsilon

sentencia_clase -> "P_Class" "ID" "{" Lista_Declaraciones_metFunVar   "}"

Lista_Declaraciones_metFunVar-> Declaracion Lista_Declaraciones_metFunVarP
								|epsilon // puede venir solo la clase sin ninguna declaracion 
Lista_Declaraciones_metFunVarP-> Declaracion Lista_Declaraciones_metFunVarP
								| epsilon
							   


Lista_inst -> Instruccion Lista_inst'
Lista_inst'-> Instruccion Lista_inst'
			|epsilon


Instruccion->  DECLARACION_ADENTRO_DE_METODOS_FUNCIONES             // YA
 			  |Sentencia_while			  // YA 
 			  |Sentencia_for			  //YA
 			  |SentenciaImprime		      // YA 
 			  |Sentencia_if				  // YA 
 			  |SentenciaSwitch_case
 			  |asignacionSimple			  // YA 
			  |Sentencia_do_while		  // YA
			  |sentencia_llama_metodo     //NO SE PROGRAMAN YA INCLUIDAS EN PRODUCCION  asignacionSimple 
			  |opcionMetodoFuncion     //NO SE PROGRAMAN YA INCLUIDAS EN PRODUCCION  topa Declaracion 
			  |epsilon
				// solo puede ser usadas en ciertos casos  seran Instruccion pero que tendran una condicion bool 
			  |Sentencia_return_funciones
			  |Sentencia_continue
			  |sentencia_break


// un sentencia_llama_metodo  sera considerado como una expresion 


ListaIns_entreLLaves-> "{" Lista_inst "}"

opcionMetodoFuncion-> Tipo ID  lista_parametros ")" "{" Lista_inst "}"
					| ")" "{" Lista_inst "}"

lista_parametros -> ","  Tipo ID  lista_parametros
			| epsilon



DECLARACION_ADENTRO_DE_METODOS_FUNCIONES-> tipo ID DeclaracionP_metodos
										
DeclaracionP_metodos -> Lista_ids asignacion ";"
			 


// en el void activo la bool de metodo 
Declaracion-> p_res_void ID  "(" opcionMetodoFuncion
			| tipo ID DeclaracionP

// activo bool de funcion 
DeclaracionP ->"(" opcionMetodoFuncion
			  |Lista_ids asignacion ";"

Lista_ids-> "," ID  lista_ids
			| epsilon

asignacion'-> "=" expresion 
			| epsilon 



asignacionSimple -> ID OpcionAsignacion
OpcionAsignacion->  "="  expresion ";"
				  | "(" sentencia_llama_metodo ";"






sentencia_break-> p_break ";"

Sentencia_do_while-> p_res_do ListaIns_entreLLaves  palabra_while "(" lista_expresiones_condicionales ")" ";"


sentencia_continue-> p_res_continue	";"


Sentencia_return_funciones-> p_res_return expresion ";"
Sentencia_return_metodos-> p_res_return ";"


ListaExpresiones -> expresion Lista_expresionP
Lista_expresionP -> "," expresion Lista_expresionP
		   			|epsilon 


Sentencia_if -> P_if "(" lista_expresiones_condicionales ")" ListaIns_entreLLaves else'

else'-> P_else multiplesIf
		|epsilon
multiplesIf -> |  ListaIns_entreLLaves
 			   | sentencia_if
		    

Sentencia_while -> P_while "(" lista_expresiones_condicionales ")" ListaIns_entreLLaves

Sentencia_for -> P_for "(" declaracionFOR ";" lista_expresiones_condicionales ";" ID DecrementoIncremento")" ListaIns_entreLLaves

DecrementoIncremento -> "++"
					   |"--"

declaracionFOR -> Tipo ID "=" expresion 
				| id "=" expresion





lista_expresiones_condicionales -> expresion ListaExpresionesCondicionalesP
ListaExpresionesCondicionalesP -> "&&"  expresion ListaExpresionesCondicionalesP
								| "||"  expresion ListaExpresionesCondicionalesP
								| epsilon
Tipo -> Int 
		|double 
		|Char 
		|String 
		|Bool





SentenciaImprime -> P_res_Console ". " P_WriteLine "(" expresion' ")" ";"


SentenciaSwitch_case -> P_switch "(" ID ")" "{"  ListaCases  Default'   "}"

ListaCases -> case listaCase'
listaCase' -> case listaCase'
			|epsilon

caseP ->p_case opcionCase ":" Lista_inst  sentencia_break

OpcionBreak-> p_break ";"  // PREGUNTAR 
			| epsilon

OpcionCase->  Num
			| cadena
			| caracter
			// ver si se puede bool tambien 

Default' -> P_default ":" Lista_inst  p_break ";"
		|epsilon



Expresion->E  simboloComparacionOpcional 

 simboloComparacionOpcional  ->  ==  E  
							 | > E
 							 | < E
							 | <= E
 							 | >= E
 							 | != E
 							 | Epsilon




E-> TE'
E'->+TE'
 |-TE'
 | Epsilon
T-> FT'
T'->*FT'
 | / FT'
 |Epsilon
F-> Decimales
 | Cadena
 | ID ExpresionMetodo
 | true
 | false
 | Numero
 | caracter
 | !E
 | (Expresion)

ExpresionMetodo -> "(" sentencia_llama_metodo 
					| epsilon
sentencia_llama_metodo -> ListaExpresiones ")"
					| ")" 

sentencia_llama_metodo -> Tipo ID  lista_parametros ")" 
					| ")" 

sentencia_llama_metodo -> ")" 
					|  ListaExpresiones ")"
